# project-botty

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  bot.Dockerfile  docker-compose.yaml  embed.Dockerfile  pyproject.toml  requirements-bot.txt  requirements-embed-service.txt
.github/workflows/: pre-commit.yml
services/discord_bot/: botty.py  config.py  constants.py  logging_formatter.py  main.py  utils.py
services/discord_bot/cogs/: chat_gpt.py  content_search.py  generic_cog.py  identities.py  introductions.py  toxicity.py
services/embed_service/: log_config.py
services/embed_service/server/: app.py  model.py  wsgi.py
