[tool.poetry]
name = "services"
version = "0.1.0"
description = "Bot for the FASD discord server"
authors = ["Floris van Beers <florisvanbeers@hotmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "~3.11"
types-requests = "^2.31.0.20240406"


[tool.poetry.group.bot.dependencies]
discord = "^2.3.2"
motor = "^3.4.0"
openai = "^1.14.3"
numpy = "^1.26.4"
requests = "^2.31.0"
gcld3 = "^3.0.13"
pydantic-settings = "^2.2.1"



[tool.poetry.group.embed_service.dependencies]
onnxruntime = "^1.17.1"
flask = "^3.0.2"
transformers = "^4.39.3"
flask-pydantic = "^0.12.0"
requests = "^2.31.0"
sentencepiece = "^0.2.0"
torch = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-assume = "^2.4.3"
black = "^22.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
# strict = true

[tool.pylint.main]
jobs = 1
ignored-modules = ["torch"]
generated-members = ["torch.*", "gcld3.*"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "C0114",                        # missing docstring module
    "C0116",                        # missing docstring function / method
    "C0115",                        # missing docstring class
    "R0913",                        # too many arguments
    "R0801",                        # similar lines in two files
    "W0511",                        # TODO's in code
    "R0902",                        # Too many instance attributes
]
